--- a/Dockerfile_enh
+++ b/Dockerfile_enh
@@ -1,63 +1,20 @@
-# 使用 Ubuntu 作為基礎映像檔
-FROM ubuntu:22.04
+FROM ubuntu:22.04-slim
 
-# 避免在安裝過程中出現互動式提示
-ENV DEBIAN_FRONTEND=noninteractive
+WORKDIR /usr/src/app
 
-# 更新套件列表並安裝必要的套件
-RUN apt-get update && apt-get install -y \
-    pipewire \
-    pipewire-audio-client-libraries \
-    pipewire-pulse \
-    wireplumber \
-    pulseaudio-utils \
-    dbus \
-    dbus-x11 \
-    systemd \
+# 安裝必要的工具並添加 PPA
+RUN apt update && apt-get install --no-install-recommends -y software-properties-common gnupg2 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && add-apt-repository ppa:pipewire-debian/pipewire-upstream
+
+# 安裝 Pipewire，請將 <版本號> 替換為實際版本號
+RUN apt update && apt-get install --no-install-recommends -y pipewire=0.3.48 libspa-0.2-modules=0.3.48-1ubuntu1 \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# 建立必要的目錄
-RUN mkdir -p /run/user/1000 /run/dbus
+RUN pipewire --version
+RUN systemctl --user status pipewire || true
 
-# 設定環境變數
-ENV XDG_RUNTIME_DIR=/run/user/1000
-ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
-ENV DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
-ENV DBUS_SYSTEM_BUS_ADDRESS=unix:path=/run/dbus/system_bus_socket
-
-# 建立一個非 root 使用者
-RUN useradd -m -u 1000 user
-RUN chown -R user:user /run/user/1000
-
-# 設定 DBus 系統目錄權限
-RUN chown -R user:user /run/dbus
-
-# 切換到非 root 使用者
-USER user
-
-# 設定工作目錄
-WORKDIR /home/user
-
-# 建立啟動腳本
-RUN echo '#!/bin/bash\n\
-# 啟動系統 DBus 守護程序\n\
-dbus-daemon --system --nofork --nopidfile &\n\
-sleep 2\n\
-# 啟動使用者 session DBus 守護程序\n\
-dbus-daemon --session --address=unix:path=/run/user/1000/bus --nofork --nopidfile &\n\
-sleep 2\n\
-# 啟動 PipeWire 和相關服務\n\
-pipewire &\n\
-sleep 2\n\
-pipewire-pulse &\n\
-sleep 2\n\
-wireplumber &\n\
-sleep 2\n\
-exec "$@"' > /home/user/entrypoint.sh && \
-    chmod +x /home/user/entrypoint.sh
-
-# 設定 ENTRYPOINT
-ENTRYPOINT ["/home/user/entrypoint.sh"]
-
-# 預設指令
+# 如果有應用程式啟動命令，可以添加到這裡
 CMD ["bash"]
