--- a/Dockerfile_enh
+++ b/Dockerfile_enh
@@ -10,5 +10,7 @@ RUN apt update && apt-get install --no-install-recommends -y pipewire libspa-0.2
 RUN pipewire --version
 RUN systemctl --user status pipewire || true
 
-# 如果有應用程式啟動命令，可以添加到這裡
-CMD ["bash"]
+COPY ./ladspa/libdeep_filter_ladspa-0.5.6-x86_64-unknown-linux-gnu.so /usr/lib/ladspa/libdeep_filter_ladspa.so
+COPY ./ladspa/deepfilter-mono-source.conf /root/.config/pipewire/filter-chain.conf.d/filter-chain.conf
+
+COPY app/audio_enhance.sh .
