--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 blinker==1.9.0
+cffi==1.17.1
 click==8.1.7
 Flask==3.1.0
 Flask-Cors==5.0.0
@@ -7,6 +8,10 @@ greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+numpy==2.1.3
+pycparser==2.22
+sounddevice==0.5.1
+uv==0.5.4
 Werkzeug==3.1.3
 zope.event==5.0
 zope.interface==7.1.1
