--- a/Dockerfile_vol
+++ b/Dockerfile_vol
@@ -9,9 +9,8 @@ RUN apt clean && rm -rf /var/lib/apt/lists/*
 
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
-RUN pip install uv
 COPY ./requirements.txt .
-RUN uv pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
 ENV PULSE_COOKIE=/run/user/1000/pulse/cookie
