--- a/docker-compose_control.yml
+++ b/docker-compose_control.yml
@@ -1,21 +1,23 @@
-version: '3.8'
+name: audio_control
 
 services:
   audio_ctl:
     build:
-      context: .
-      dockerfile: Dockerfile
-    image: audio_ctl:latest
+      context: /mnt/audio-pro
+      dockerfile: /mnt/audio-pro/Dockerfile_ctl
+      
+    image: audio-ctl:latest
     container_name: audio_ctl
-    command: python app.py
+
+    command: ["python", "audio_control.py"]
     ports:
-      - "9527:9527"
+      - "5003:5003"
     devices:
       - /dev/bus/usb:/dev/bus/usb
     volumes:
       - /run/user/${UID}/pulse:/run/user/${UID}/pulse
       - /var/run/docker.sock:/var/run/docker.sock
-      - /mnt/audio/NorthAudio/space/run_dfn_n_vol.yaml:/mnt/audio/NorthAudio/space/run_dfn_n_vol.yaml
+      - /mnt/audio-pro/docker-comose_services.yaml:/usr/src/app/docker-comose_services.yaml
     environment:
       - PULSE_SERVER=unix:/run/user/${UID}/pulse/native
     restart: unless-stopped
