Rename container in Docker Compose file from 'audio_ctl' to 'audio-ctl'

--- a/docker-compose_control.yml
+++ b/docker-compose_control.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: /mnt/audio-pro/Dockerfile_ctl
       
     image: audio-ctl:latest
-    container_name: audio_ctl
+    container_name: audio-ctl
 
     command: ["python", "audio_control.py"]
     ports:
