Refactor audio status keys to use hyphenated naming and update volume monitor command in Docker Compose

--- a/docker-compose_services.yml
+++ b/docker-compose_services.yml
@@ -45,7 +45,7 @@ services:
 
     image: audio-vol:latest
     container_name: audio-vol
-    command: ["python", "-m", "volume_monitor.py"]
+    command: ["python", "volume_monitor.py"]
     logging:
       driver: "local"
       options:
