Fix file extension typo in Docker volume paths in README and docker-compose_control.yml

--- a/docker-compose_control.yml
+++ b/docker-compose_control.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - /run/user/1000/pulse:/run/user/1000/pulse
       - /var/run/docker.sock:/var/run/docker.sock
-      - ~/audio-pro/docker-comose_services.yaml:/usr/src/app/docker-comose_services.yaml
+      - ~/audio-pro/docker-comose_services.yml:/usr/src/app/docker-comose_services.yml
     environment:
       - PULSE_SERVER=unix:/run/user/1000/pulse/native
     restart: unless-stopped
