--- a/docker-compose_services.yml
+++ b/docker-compose_services.yml
@@ -3,8 +3,8 @@ name: audio_services
 services:
   audio-enh:
     build:
-      context: ~/audio-pro
-      dockerfile: ~/audio-pro/Dockerfile_enh
+      context: /mnt/audio/audio-pro
+      dockerfile: /mnt/audio/audio-pro/Dockerfile_enh
 
     restart: always
     volumes:
@@ -27,8 +27,8 @@ services:
 
   audio-vol:
     build:
-      context: ~/audio-pro
-      dockerfile: ~/audio-pro/Dockerfile_vol
+      context: /mnt/audio/audio-pro
+      dockerfile: /mnt/audio/audio-pro/Dockerfile_vol
 
     restart: always
     depends_on:
