Update README and Docker configurations for improved paths and environment variables; modify limit validation in restart_services function

--- a/docker-compose_control.yml
+++ b/docker-compose_control.yml
@@ -20,4 +20,5 @@ services:
       - /mnt/audio/audio-pro/docker-compose_services.yml:/usr/src/app/docker-compose_services.yml
     environment:
       - PULSE_SERVER=unix:/run/user/1000/pulse/native
+      - TZ=Asia/Taipei
     restart: unless-stopped
