--- a/Dockerfile_vol
+++ b/Dockerfile_vol
@@ -15,5 +15,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
 ENV PULSE_COOKIE=/run/user/1000/pulse/cookie
 ENV XDG_RUNTIME_DIR=/run/user/1000
+ENV TZ=Asia/Taipei
 
 COPY ./app/volume_monitor.py .
