--- a/docker-compose_services.yml
+++ b/docker-compose_services.yml
@@ -13,9 +13,9 @@ services:
         target: /run/user/1000/pipewire-0
         bind:
           create_host_path: false
-    environment:
-      - XDG_RUNTIME_DIR=/run/user/1000/
-      - TZ=Asia/Taipei
+    # environment:
+    #   - XDG_RUNTIME_DIR=/run/user/1000/
+    #   - TZ=Asia/Taipei
     
     image: audio-enh:latest
     container_name: audio-enh
