--- a/Dockerfile_vol
+++ b/Dockerfile_vol
@@ -10,11 +10,9 @@ RUN apt clean && rm -rf /var/lib/apt/lists/*
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
 COPY ./requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
-ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
-ENV PULSE_COOKIE=/run/user/1000/pulse/cookie
-ENV XDG_RUNTIME_DIR=/run/user/1000
-ENV TZ=Asia/Taipei
+# ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
+# ENV PULSE_COOKIE=/run/user/1000/pulse/cookie
 
 COPY ./app/volume_monitor.py .
