--- a/Dockerfile_vol
+++ b/Dockerfile_vol
@@ -12,7 +12,7 @@ RUN ln -s /usr/bin/python3 /usr/bin/python
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
-# ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
-# ENV PULSE_COOKIE=/run/user/1000/pulse/cookie
+ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
+ENV PULSE_COOKIE=/run/user/1000/pulse/cookie
 
 COPY ./app/volume_monitor.py .
