--- a/docker-compose_services.yml
+++ b/docker-compose_services.yml
@@ -3,8 +3,8 @@ name: audio_services
 services:
   audio-enh:
     build:
-      context: ~/audio-pro
-      dockerfile: ~/audio-pro/Dockerfile_enh
+      context: /home/north/audio-pro
+      dockerfile: /home/north/audio-pro/Dockerfile_enh
 
     restart: always
     volumes:
@@ -18,6 +18,7 @@ services:
     environment:
       - XDG_RUNTIME_DIR=/run/user/1000/
       - TZ=Asia/Taipei
+      - LIMIT=${LIMIT:-20}
     
     image: audio-enh:latest
     container_name: audio-enh
@@ -30,8 +31,8 @@ services:
 
   audio-vol:
     build:
-      context: ~/audio-pro
-      dockerfile: ~/audio-pro/Dockerfile_vol
+      context: /home/north/audio-pro
+      dockerfile: /home/north/audio-pro/Dockerfile_vol
 
     restart: always
     depends_on:
