--- a/Dockerfile_vol
+++ b/Dockerfile_vol
@@ -14,5 +14,6 @@ RUN pip install -r requirements.txt
 
 ENV PULSE_SERVER=unix:/run/user/1000/pulse/native
 ENV PULSE_COOKIE=/run/user/1000/pulse/cookie
+ENV XDG_RUNTIME_DIR=/run/user/1000
 
 COPY ./app/volume_monitor.py .
