1. Adjust fix path to relative path on two docker-compose.yml ( services.audio_xxx.build.context ) 2. Adjust docker image from local to private docker hub ( services.audio_xxx.image ) 3. Create enviroment file, it will auto attach to docker container.

--- a/docker-compose_control.yml
+++ b/docker-compose_control.yml
@@ -3,10 +3,10 @@ name: audio_control
 services:
   audio_ctl:
     build:
-      context: /mnt/audio/audio-pro
-      dockerfile: /mnt/audio/audio-pro/Dockerfile_ctl
-      
-    image: audio-ctl:latest
+      context: .
+      dockerfile: ./Dockerfile_ctl
+
+    image: ${DOCKER_HUB_SERVER}/${DOCKER_PROJECT}/audio-ctl:${TAGVERSION}
     container_name: audio-ctl
 
     command: ["python", "audio_control.py"]
@@ -17,7 +17,7 @@ services:
     volumes:
       - /run/user/1000/pulse:/run/user/1000/pulse
       - /var/run/docker.sock:/var/run/docker.sock
-      - /mnt/audio/audio-pro/docker-compose_services.yml:/usr/src/app/docker-compose_services.yml
+      - ./docker-compose_services.yml:/usr/src/app/docker-compose_services.yml
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
     environment:
